--- a/.github/workflows/greedy-snake-ci.yml
+++ b/.github/workflows/greedy-snake-ci.yml
@@ -26,3 +26,8 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
+    - name: Deploy
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+         github_token: ${{ secrets.greedy_snake_secret }}
+         publish_dir: ./dist
